# gh-infra

./: .ansible-lint  .envrc  .gitignore  .pre-commit-config.yaml  .vault_pass.example  .yamllint  Makefile  README.md  _typos.toml  ansible.cfg  hosts.txt  pyproject.toml  run_molecule.py
ansible/: .env.example  .envrc  .vault_pass.example  Makefile  ansible.cfg  debug.yml  hosts.txt  pyproject.toml
ansible/integration_tests/redis/molecule/default/: molecule.yml  playbook.yml
ansible/inventories/dev/: hosts
ansible/inventories/dev/group_vars/all/: 001_local_env_vars.yml
ansible/inventories/dev/host_vars/: gh-local-deplayed.yml  gh-local-master.yml  gh-local-slave.yml
ansible/inventories/prod/: hosts
ansible/inventories/prod/group_vars/all/: 001_remote_env_vars.yml
ansible/inventories/prod/host_vars/: gh-prod-mysql-delayed-01.yml  gh-prod-mysql-master-01.yml  gh-prod-mysql-slave-01.yml  gh-prod-redis-caching-01.yml  gh-prod-redis-queue-01.yml
ansible/inventories/test/group_vars/redis/: redis.yml
ansible/inventories/test/host_vars/: vg-ubuntu-18-igt-mysql.yml
ansible/roles/common/: .yamllint  Makefile
ansible/roles/common/files/: id_rsa.pub.vault  id_rsa.vault
ansible/roles/common/handlers/: main.yml
ansible/roles/common/molecule/: playbook.yml
ansible/roles/common/tasks/: apt.yml  build.yml  chrony.yml  hardening.yml  hostname.yml  hugepage.yml  journald.yml  limit.yml  locale.yml  logrotate.yml  main.yml  node_exporter.yml  other.yml  packages.yml  ps_mem.yml  sshd.yml  sudo.yml  sysctl.yml  systemd.yml  timezone.yml  users.yml  utils.yml
ansible/roles/common/templates/: 10-network-perf.conf.j2  10-network-security.conf.j2  10-system-memory.conf.j2  10-system-security.conf.j2  20auto-upgrades.j2  30-bash.conf.j2  50unattended-upgrades.j2  bash.bashrc.j2  bash_aliases.j2  chrony.conf.j2  gh-system.j2  locale.j2  logrotate.conf.j2  ps_mem.py.j2  rc.local.j2  sshd_config.j2  user.conf.j2  vimrc.j2
ansible/roles/memcached/: Makefile
ansible/roles/memcached/defaults/: main.yml
ansible/roles/memcached/handlers/: main.yml
ansible/roles/memcached/molecule/: playbook.yml
ansible/roles/memcached/tasks/: build.yml  config.yml  main.yml  memcached_exporter.yml
ansible/roles/memcached/templates/: memcached.conf.j2  memcached.j2  memcached.service.j2  memcached_exporter.service.j2
ansible/roles/redis/defaults/: main.yml
ansible/roles/redis/handlers/: main.yml
ansible/roles/redis/molecule/: playbook.yml
ansible/roles/redis/tasks/: build.yml  config.yml  main.yml  os.yml  redis_exporter.yml
ansible/roles/redis/templates/: redis.conf.j2  redis.j2  redis.service.j2  redis_exporter.service.j2
(+70 files in other folders)
