[tool.poetry]
name = "gh-infra"
version = "0.1.0"
description = "Ansible provisioning gh-infra"
authors = ["xluffy <xquang.foss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "2.8.7"
molecule = "2.22"
ansible-generator = "2.0.0"
ansible-lint = "4.1.0"
mccabe = "0.6.1"
mitogen = "0.2.7"
py = "1.7.0"
anyconfig = "0.9.7"
arrow = "0.13.1"
asn1crypto = "0.24.0"
"aspy.yaml" = "1.3.0"
atomicwrites = "1.3.0"
attrs = "18.2.0"
bcrypt = "3.1.6"
binaryornot = "0.4.4"
Cerberus = "1.3.1"
certifi = "2018.11.29"
cffi = "1.12.1"
cfgv = "2.0.1"
chardet = "3.0.4"
click = "6.7"
click-completion = "0.3.1"
colorama = "0.3.9"
cookiecutter = "1.6.0"
cryptography = "2.5"
docker-py = "1.10.6"
docker-pycreds = "0.4.0"
entrypoints = "0.3"
fasteners = "0.14.1"
filelock = "3.0.12"
flake8 = "3.6.0"
future = "0.17.1"
git-url-parse = "1.2.0"
identify = "1.4.8"
idna = "2.7"
importlib-metadata = "0.18"
Jinja2 = "2.10.1"
jinja2-time = "0.2.0"
MarkupSafe = "1.1.0"
monotonic = "1.5"
more-itertools = "6.0.0"
mysql-connector-python = "8.0.17"
nodeenv = "1.3.3"
packaging = "19.0"
paramiko = "2.5.0"
pathspec = "0.5.9"
pbr = "5.1.1"
pexpect = "4.6.0"
pluggy = "0.12.0"
poyo = "0.4.2"
pre-commit = "1.20.0"
prettytable = "0.7.2"
protobuf = "3.9.1"
psutil = "5.4.6"
ptyprocess = "0.6.0"
pyasn1 = "0.4.5"
pycodestyle = "2.4.0"
pycparser = "2.19"
pyflakes = "2.0.0"
PyNaCl = "1.3.0"
pyparsing = "2.4.1.1"
pytest = "4.3.0"
python-dateutil = "2.8.0"
python-dotenv = "0.10.3"
python-gilt = "1.2.1"
python-vagrant = "0.5.15"
PyYAML = "5.1"
raven = "6.10.0"
requests = "2.21.0"
"ruamel.yaml" = "0.15.88"
sh = "1.12.14"
six = "1.11.0"
tabulate = "0.8.3"
testinfra = "3.0.6"
toml = "0.10.0"
tox = "3.13.2"
tree-format = "0.1.2"
urllib3 = "1.24.1"
virtualenv = "16.7.1"
websocket-client = "0.54.0"
whichcraft = "0.5.2"
yamllint = "1.15.0"
zipp = "0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
